# demeter-api

./: .dockerignore  .env  .env.example  .env.production.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  DEPLOY_CHECKLIST.md  DEPLOY_EASYPANEL.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2025_10_26_1748-efca27a304b5_initial_migration.py
app/: main.py
app/core/data/: database.py
docker/: Dockerfile  docker-compose.yml
docker/scripts/: entrypoint.sh  healthcheck.sh
scripts/: healthcheck.sh
src/: main.py
src/application/: __init__.py
src/application/schemas/: __init__.py  auth.py  classification.py  user.py
src/application/use_cases/: __init__.py
src/cli/: __init__.py  create_admin.py  seed_roles.py
src/config/: __init__.py  settings.py
src/config/db/: __init__.py  database.py  dependencies.py
src/config/dependencies/: __init__.py  common.py
src/config/exceptions/: __init__.py  custom_exceptions.py  handlers.py
src/config/logging/: __init__.py  logger.py
src/config/security/: __init__.py  auth.py  password.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  user.py
src/domain/repositories/: __init__.py  refresh_token_repository.py  user_repository.py
src/infrastructure/models/: __init__.py  audit_log.py  classification.py  permission.py  refresh_token.py  role.py  role_permission.py  user.py  user_role.py
src/presentation/: __init__.py
src/presentation/api/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py  test_database.py  test_health.py
tests/integration/: test_auth_flow.py  test_classifications_flow.py  test_ml_classification_flow.py  test_permissions.py
tests/unit/: test_demeter_ml_service.py  test_jwt.py  test_mock_classifier.py  test_password.py
uploads/: .gitkeep
(+37 files in other folders)
